# fsdp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  plot.py  pyproject.toml
.github/workflows/: ci.yaml
src/fsdp/: __init__.py  buffer_pool.py  config.py  consts.py  data.py  dist_utils.py  dummy_fsdp.py  exceptions.py  fsdp_layer.py  model.py  model_wrapper.py  plot_comparisons.py  profiling_utils.py  run_on_cloud.py  streams.py  train_loop.py
src/fsdp/models/: model_with_flash_attn.py  tiny_model.py
tests/: mocks.py  test_correctness.py  test_correctness_with_real_model.py
