[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "fsdp"
version = "0.1.0"
description = "DIY FSDP with YaFSDP-style two-buffer overlap; Jupyter-friendly multi-GPU runner"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

dependencies = [
  "torch>=2.3.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
profiling = [
  "tensorboard>=2.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fsdp"]

[tool.hatch.build.targets.editable]
packages = ["src/fsdp"]


[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
