[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "fsdp"
version = "0.1.0"
description = "DIY FSDP with YaFSDP-style two-buffer overlap; Jupyter-friendly multi-GPU runner"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

dependencies = [
  "torch>=2.8.3",
  "numpy>=1.24",
  "tqdm>=4.66",
  "rich>=13.7",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "matplotlib>=3.10.7",
  "loguru>=0.7.3",
]

[project.optional-dependencies]
flash = [
    "flash-attn==2.8.3",
]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
profiling = [
  "tensorboard>=2.13",
]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.8.3"
requires-dist = ["torch", "einops"]

[tool.hatch.build.targets.wheel]
packages = ["src/fsdp"]

[tool.hatch.build.targets.editable]
packages = ["src/fsdp"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
